--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       color: white;      
     }
 
-    .flag > div > div > div > p{
+    body > div > div > div > p{
       color: black;
     }
     
